 1.2 (March XX, 2015)
======================
Added getCurrentSightRadius() to BaseRadar interface
New combat radar element: MapBorderRenderer
 - Displays retreat zone in yellow
 - Displays gravity barrier line in red

 1.1f (March 06, 2015)
=======================
Fixed a bug that caused intermittent radar corruption in the campaign
Lines and points on the radar should look much sharper now (thanks Alex)

 1.1e (February 12, 2015)
==========================
Stations and planets with the "comm_relay" tag aren't considered relays
The campaign radar won't draw anything with the tag "radar_nodraw"

 1.1d (December 09, 2014)
==========================
Hopefully fixed a bug where campaign radar components would occasionally vanish

 1.1c (December 03, 2014)
==========================
The radar is no longer drawn over menus or when the HUD is turned off
Greatly increased the speed of the battle progress bar animation
Fixed crash in ShipPolygonRenderer when rendering ships that lack bounds
Radar no longer reactivates when the player's ship is fully destroyed

 1.1b (October 23, 2014)
=========================
Campaign fleet renderer changes:
 - Fleets are only colored red if they are hostile towards the player
Battle progress bar changes:
 - Doesn't show initial relative fleet strengths in a simulation battle
 - Ignores ships still in picker in simulation battles
 - Doesn't count the reserves of a fleet in full retreat

 1.1 (October 21, 2014)
========================
Updated to support Starsector .65a
Station rendering fixed in campaign
Comm relays are now included on the campaign radar
Zooming is now done using +/-, toggling the radar on/off is still K by default
Zooming in/out is now animated